macros/tests/unhappy/expected_unchecked_param_type_value.test.stderr
error: expected a value for this attribute: `unchecked_param_type = ...` and it must be a string literal
  --> tests/unhappy/expected_unchecked_param_type_value.test.rs:10:23
   |
10 |         #[wasm_export(unchecked_param_type)]
   |                       ^^^^^^^^^^^^^^^^^^^^
